Updated build to Android API 35

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,8 @@ aliases:
 # -----------------------------
 
 orbs:
-  azure-cli: circleci/azure-cli@1.2.2
-  browser-tools: circleci/browser-tools@1.5.0
+  azure-cli: circleci/azure-cli@1.3.2
+  browser-tools: circleci/browser-tools@2.2.0
 
 jobs:
   checkout_code:
@@ -180,7 +180,7 @@ jobs:
   android_build_and_deploy:
     <<: *defaults
     docker:
-      - image: cimg/android:2025.01-browsers
+      - image: cimg/android:2025.04-browsers
     environment:
       JVM_OPTS: -Xmx3200m
       CIRCLE_ARTIFACTS: /home/circleci/code/cordova/platforms/android/build/outputs/apk
@@ -306,14 +306,14 @@ workflows:
             - package_dependencies
           filters:
             branches:
-              only: /^(master|live)$/
+              only: /^(master|live|android-api-35)$/
       - android_build_and_deploy:
           requires:
             - tests
             - ember_cordova_build
           filters:
             branches:
-              only: /^(master|live)$/
+              only: /^(master|live|android-api-35)$/
       - ios_build_and_deploy:
           requires:
             - tests
