Revert CI config for merge
This reverts commit b207757a28cd2d3049ae489e3e3545ed33bb6c74.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -309,18 +309,18 @@ workflows:
             - package_dependencies
           filters:
             branches:
-              only: /^(master|live|update-xcode-ruby)$/
+              only: /^(master|live)$/
       - android_build_and_deploy:
           requires:
             - tests
             - ember_cordova_build
           filters:
             branches:
-              only: /^(master|live|update-xcode-ruby)$/
+              only: /^(master|live)$/
       - ios_build_and_deploy:
           requires:
             - tests
             - ember_cordova_build
           filters:
             branches:
-              only: /^(master|live|update-xcode-ruby)$/
+              only: /^(master|live)$/
